Modifications for building in Docker

--- a/dictionary-backend/src/main/resources/application.properties
+++ b/dictionary-backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/jisho
+spring.datasource.url=jdbc:postgresql://10.0.2.167:5432/jisho
 spring.datasource.username=postgres
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
