--- a/dictionary-backend/Dockerfile
+++ b/dictionary-backend/Dockerfile
@@ -1,10 +1,10 @@
 # Build the Spring Boot API
-FROM maven:3.6.1-jdk-8-alpine AS builder
+FROM maven:3.6.3-openjdk-11-slim AS builder
 ADD . ./
-RUN mvn clean package
+RUN mvn -f pom.xml clean package -e
 
 # Final Stage Build
-FROM openjdk:8-jre-alpine3.9
+FROM openjdk:11-jre-slim
 COPY --from=builder /target/dictionary-0.0.1-SNAPSHOT.jar /demo.jar
 EXPOSE 8080
 CMD ["java", "-jar", "/demo.jar"]
