--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports: 
       - 8082:8080
   
-  sudoku-frontend:
+  dictionary-frontend:
     build: ./dictionary-frontend
     container_name: dictionary-frontend
     ports:
