--- a/dictionary-backend/src/main/resources/application.properties
+++ b/dictionary-backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:postgresql://10.0.2.167:5432/jisho
+spring.datasource.url=jdbc:postgresql://10.124.0.2:5432/jisho
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
