Adding command to skip tests during build

--- a/dictionary-backend/Dockerfile
+++ b/dictionary-backend/Dockerfile
@@ -1,7 +1,7 @@
 # Build the Spring Boot API
 FROM maven:3.6.3-openjdk-11-slim AS builder
 ADD . ./
-RUN mvn -f pom.xml clean package -e
+RUN mvn -f pom.xml clean package -e -DskipTests
 
 # Final Stage Build
 FROM openjdk:11-jre-slim
