--- a/dictionary-frontend/public/manifest.json
+++ b/dictionary-frontend/public/manifest.json
@@ -4,8 +4,8 @@
   "icons": [
     {
       "src": "Japanese_Hiragana_A.jpg",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png",
+      "sizes": "192x192"
     }
   ],
   "start_url": ".",
